 NanoWatchdog - NEWS

 Summary
 =======
 
   Version 9.2016
   Version 8.2016
   Version 7.2016
   Version 6.2015
   Version 5.2015
   Version 4.2015
   Version 2015.3
   Version 2015.2
   Version 2015.1

-----------------------------------------------------------------------
 Version 9.2016
 ==============

 Release date: 

 Bugfixes:
               - Fix the daemon startup command-line options.

 Packaging:
               - simplify the src/ hierarchy.

-----------------------------------------------------------------------
 Version 8.2016
 ==============

 Release date: 2016- 9-12

 NanoWatchdog client:
               - fix respective communication ports of daemon vs. board.

 NanoWatchdog daemon:
               - have several verbosity levels (todo #15).
               - new 'SET VERBOSE <n>' command: modify verbosity level at runtime.

-----------------------------------------------------------------------
 Version 7.2016
 ==============

 Release date: 2016- 8-30

 NanoWatchdog daemon:
               - manage SysV init system.

-----------------------------------------------------------------------
 Version 6.2015
 ==============

 Release date: 2015- 9- 6

 NanoWatchdog client:
               - fix help message.

 NanoWatchdog daemon:
               - review the mail sent at boot up.
               - improve help message.

-----------------------------------------------------------------------
 Version 5.2015
 ==============

 Release date: 2015- 8-29

 NanoWatchdog daemon:
               - review the mail sent at boot up.

-----------------------------------------------------------------------
 Version 4.2015
 ==============

 Release date: 2015- 8-19

 Packaging:
               - change the versioning scheme.
               - define an 'install-txz' autonomous target.
               - define an udev rule to /dev/nanowatchdog.
               - use 'no-dist-gzip' (todo #28).

 NanoWatchdog daemon:
               - review the mail sent at boot up (todo #29).
